infra/dev/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: yemjoy/posts:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 3000
