infra/dev/query.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: yemjoy/query:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
