infra/dev/comments.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-service
  namespace: default
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4000
      targetPort: 4000
