infra/dev/event-bus.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-service
  namespace: default
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 6000
      targetPort: 6000
