infra/dev/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts
  namespace: default
spec:
  selector:
    app: posts
  type: NodePort
  ports:
    - name: posts
      protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
  namespace: default
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 3000
      targetPort: 3000
