infra/dev/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
  namespace: default
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 5000
      targetPort: 5000
